# studioink-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  studioink.code-workspace
config/nginx/: nginx.conf
src/: conftest.py
src/api/: filters.py  serializers.py  urls.py  utils.py
src/api/migrations/: 0001_initial.py  0002_termsacceptance.py  0003_artistprofile_role.py  0004_invitation.py  0005_alter_artistprofile_user_alter_invitation_status_and_more.py  0006_timeblock.py  0007_clientphoto.py  0008_consentform.py
src/api/models/: __init__.py  appointment.py  artist.py  client.py  client_photo.py  consent_form.py  invitation.py  portfolioImage.py  portfolio_image.py  studio.py  subscription.py  termsAcceptance.py  terms_acceptance.py  time_block.py
src/api/permissions/: isStudioOwner.py  isSubscriptionStudio.py  is_artist_of_studio.py  is_subscription_studio.py
src/api/services/: appointment.py  appointment_service.py  client_service.py  invitation_service.py  portfolio_service.py  register_service.py  registration_service.py  stripe_service.py  time_block_service.py
src/api/tasks/: __init__.py  sendEmail.py  send_email.py
src/api/templates/emails/: base_email.html  invitation_email.html  invitation_email.txt
src/api/tests/: factories.py
src/api/tests/integration/: conftest.py  test_appointment_service.py  test_invitation_service.py  test_register_service.py  test_time_block_service.py
src/api/tests/integration/subscription/: test_stripe_service.py
src/api/views/: appointment.py  appointment_view.py  client_view.py  invitations.py  invitations_view.py  portfolio_view.py  register.py  register_view.py  time_block_view.py
src/app/: celery.py  settings.py  urls.py
