[project]
name = "studioink-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Oliveira",email = "flipeaz342@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-oauth-toolkit (>=3.1.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.13.3,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["src"]
known_first_party = ["api", "app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
