[project]
name = "studioink-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Oliveira",email = "flipeaz342@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)",
    "django-allauth (>=65.12.0,<66.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "django-filter (>=25.2,<26.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.13.3,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "poethepoet (>=0.37.0,<0.38.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["src"]
known_first_party = ["api", "app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--cov=src --cov-report=html"


[tool.poe.tasks]
# Comandos Docker
up = "docker compose up"
down = "docker compose down"
build = "docker compose build"
logs = "docker compose logs -f"
restart = "docker compose restart"

# Comandos Django
migrate = "docker exec -it studioink-backend-api-1 python manage.py migrate"
makemigrations = "docker exec -it studioink-backend-api-1 python manage.py makemigrations"
shell = "docker exec -it studioink-backend-api-1 python manage.py shell"
bash = "docker exec -it studioink-backend-api-1 sh"
createsuperuser = "docker exec -it studioink-backend-api-1 python manage.py createsuperuser"

clean = "docker system prune -f"
